# python-bootstrapper

./: LICENSE  README.md  setup.cfg  setup.py
project_module/: __init__.py  __main__.py
