[metadata]

# TODO: Change this to a URL to your project's homepage, source page, or whatever
url = https://github.com/monokrome/python-bootstrapper

# TODO: Change this to point to the license used by your project
license = BSD 3-Clause License

# TODO: Change my information the information best for your project's
author = Bailey "monokrome" Stoner
author_email = monokrome@monokro.me
maintainer = Bailey "monokrome" Stoner
maintainer_email = monokrome@monokro.me

classifiers =
  # TODO: You can provide a list of classifiers matching your package here.
  # They can be comma-separated on the same line as "classifiers =", or
  # indendented with one keyword per line where this comment is.
  #
  # A list of available classifies can be found here:
  # https://pypi.org/pypi?%3Aaction=list_classifiers

keywords =
  # TODO: You can provide a list of searchable keywords related to your project
  # here. They can be comma-separated on the same line as the "keywords = ", or
  # indendented with one keyword per line where this comment is.


[options]

include_package_data = True
# This tells setuptools to include files from options.package_data or a
# MANIFEST.in file in the project root.

zip_safe = true
# This should be True unless your package contains files which can't be
# safely included in zip archives without corrupting them.

packages = find:  
# This will automatically discover packages in your project so that you don't
# need to include them yourself. This works in most cases, but you can opt to
# provide them manually if you prefer.

install_requires =
  # TODO: Replace this with a list of your non-test dependencies. Each line
  # should be indented with a single dependency.

tests_require =
  # TODO: Replace this with any dependencies for testing. The dependencies
  # won't be installed for your project's development, but they will be
  # available when running `python setup.py test`.


[options.extras_require]

# TODO: Include any optional dependencies here, so that people know what to
# install for different versions. The format of this should map a string
# describing the feature to a list of packages which are necessary in order

# Here's an example of how you could add some optional features:

# PDF Files =
#   ReportLab>=1.2
#   RXP
# 
# reST Parser =
#   docutils>=0.3


[options.package_data]

# TODO: Use this to let setuptools know any other files to provide when
# packaging your project. The * key applies to all directories, but you can
# also use a package name as a key to only include specific files in specific
# project directories.

* = *.md, *.html
